--- a/templates/goods/detail.html
+++ b/templates/goods/detail.html
@@ -74,7 +74,7 @@
             <div class="prize_bar">
                 <span class="show_pirze">¥<em>{{good.gprice}}</em></span>
                 <input type="hidden" id="hid_gprice" value="{{good.gprice}}"/>
-                <span class="show_unit">{{good.gunit}}</span>
+                <span class="show_unit">单位：{{good.gunit}}</span>
             </div>
             <div class="goods_num clearfix">
                 <div class="num_name fl">数 量：</div>
