--- a/templates/goods/basetwo.html
+++ b/templates/goods/basetwo.html
@@ -30,7 +30,7 @@
                 <h1>全部商品分类</h1> 
                 <span></span>           
                 <ul class="subnav">
-                    <li><a href="#" class="fruit">新鲜水果</a></li>
+                    <li><a href="/goods/goodslist/1_1/" class="fruit">新鲜水果</a></li>
                     <li><a href="#" class="seafood">海鲜水产</a></li>
                     <li><a href="#" class="meet">猪牛羊肉</a></li>
                     <li><a href="#" class="egg">禽类蛋品</a></li>
